# 34_music

./: CMakeLists.txt  README.md  partitions-16MiB.csv  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/ES8388/: es8388.c  es8388.h
components/BSP/KEY/: key.c  key.h
components/BSP/LCD/: lcd.c  lcd.h  lcdfont.h  mipi_lcd.c  mipi_lcd.h  rgblcd.c  rgblcd.h
components/BSP/LED/: led.c  led.h
components/BSP/MYI2S/: myi2s.c  myi2s.h
components/BSP/MYIIC/: myiic.c  myiic.h
components/BSP/RS485/: rs485.c  rs485.h
components/BSP/SDMMC/: sdmmc.c  sdmmc.h
components/BSP/XL9555/: xl9555.c  xl9555.h
components/Middlewares/MYFATFS/: exfuns.c  exfuns.h
components/Middlewares/PICTURE/: CMakeLists.txt  bmp.c  bmp.h  gif.c  gif.h  jpeg.c  jpeg.h  piclib.c  piclib.h  png.c  png.h  pngle.c
components/Middlewares/TEXT/: CMakeLists.txt  fonts.c  fonts.h  text.c  text.h
main/: CMakeLists.txt  main.c
main/APP/: cook_ui.c  cook_ui.h
main/APP/AUDIO/: audioplay.c  audioplay.h  wavplay.c  wavplay.h
main/APP/VIDEO/: avi.c  avi.h  mjpeg.c  mjpeg.h  mytimer.c  mytimer.h  videoplay.c  videoplay.h
tools/: convert_jpg_for_esp32.py  gen_modbus_frames.py
